Oppgavebruker bestemmes av Vault (#59)
* Oppgavebruker bestemmes av Vault

* Bedre feilhåndtering på manglende credentials oppgave

* Unngår å opprette singleton flere ganger

* Unngår å opprette singleton flere ganger

* Fjerner Factory pattern og styrer heller hvilke verdier som skal brukes basert på SHOULD_RUN_OS_OR_UR

* Bytter vault-plassering i ur

* Bytter vault-plassering i ur

* temp

* Endrer i prod også, hvis dette prodsettes så vil det ellers bare feile.

* Begynner på doc med mermaid

* Korter ned MeldingReader betraktelig(på bekostning av en exception og upålitelig telling av linjenummer)

* Endrer parsing og mapping av tekstlinjer -> meldinger -> oppgaver

* Samler logikken for equals og hashcode i subklassene

* Endrer litt på hierarkiet for å parse meldinger

* Disse kan være records

* Fjerner generisk type fra MappingRegelRepository

* Fjerner generisk type og subklasser fra Mappingregelverk

* Test for at tre meldinger med samme gjelderid, enhet og oppdragskode slås sammen til 1 oppgave

* Flere refaktoreringer, vi er på konvertering av melding -> oppgave
* Fjerner test-logging som testrammeverk uansett bør gi
* Fjerner det ekstra OsMapper-abstraksjonsnivået
* Bytter ut enda en klasse med record
* noe doc

* Flytter typiske verdiklasser inn i model-pakke

* Flytter lesing av mappingfil slik at det gjøres en gang per kjøring og ikke en gang for hver equals og hashcode i hver Melding

* Initierer statisk regelverk i noen tester.

* Begynner å tilrettelegge oppgaveoppretting
* slår sammen funksjonelle aggregeringskriterier til en klasse
* sorterer regelfil alfabetisk
* Begrenser bruk av OkosynkConfiguration, sender bare nødvendig informasjon

* Begynner å tilrettelegge oppgaveoppretting
* tar ned antall koblinger

* Fjerner subklassene til OppgaveOppretter

* Fjerner subklassene til OppgaveOppretter

* Sender hele urien med når vi legger til oppgaveid

* legger til en liten debug

* bru